@@ -395,7 +395,7 @@ const NSUInteger defaultCapacity = 29;
 
 	if( ! [textureAtlas_ resizeCapacity:quantity] ) {
 		// serious problems
-		CCLOG(@"cocos2d: WARNING: Not enough memory to resize the atlas");
+		CCLOGWARN(@"cocos2d: WARNING: Not enough memory to resize the atlas");
 		NSAssert(NO,@"XXX: CCSpriteBatchNode#increaseAtlasCapacity SHALL handle this assert");
 	}
 }
