@@ -43,6 +43,12 @@
 #import "CCSprite.h"
 #import "Support/CCFileUtils.h"
 
+@interface CCSpriteFrameCache ()
+- (void) addSpriteFramesWithDictionary:(NSDictionary*)dictionary textureFilename:(NSString*)filename;
+- (void) addSpriteFramesWithDictionary:(NSDictionary *)dictionary texture:(CCTexture2D *)texture;
+- (void) removeSpriteFramesFromDictionary:(NSDictionary*) dictionary;
+@end
+
 
 @implementation CCSpriteFrameCache
 
@@ -75,6 +81,7 @@ static CCSpriteFrameCache *sharedSpriteFrameCache_=nil;
 	if( (self=[super init]) ) {
 		spriteFrames_ = [[NSMutableDictionary alloc] initWithCapacity: 100];
 		spriteFramesAliases_ = [[NSMutableDictionary alloc] initWithCapacity:10];
+		loadedFilenames_ = [[NSMutableSet alloc] initWithCapacity:30];
 	}
 
 	return self;
@@ -91,6 +98,8 @@ static CCSpriteFrameCache *sharedSpriteFrameCache_=nil;
 
 	[spriteFrames_ release];
 	[spriteFramesAliases_ release];
+	[loadedFilenames_ release];
+	 
 	[super dealloc];
 }
 
@@ -115,7 +124,7 @@ static CCSpriteFrameCache *sharedSpriteFrameCache_=nil;
 		format = [[metadataDict objectForKey:@"format"] intValue];
 
 	// check the format
-	NSAssert( format >= 0 && format <= 3, @"cocos2d: WARNING: format is not supported for CCSpriteFrameCache addSpriteFramesWithDictionary:textureFilename:");
+	NSAssert( format >= 0 && format <= 3, @"format is not supported for CCSpriteFrameCache addSpriteFramesWithDictionary:textureFilename:");
 
 	// SpriteFrame info
 	CGRect rectInPixels;
@@ -138,7 +147,7 @@ static CCSpriteFrameCache *sharedSpriteFrameCache_=nil;
 			int oh = [[frameDict objectForKey:@"originalHeight"] intValue];
 			// check ow/oh
 			if(!ow || !oh)
-				CCLOG(@"cocos2d: WARNING: originalWidth/Height not found on the CCSpriteFrame. AnchorPoint won't work as expected. Regenerate the .plist");
+				CCLOGWARN(@"cocos2d: WARNING: originalWidth/Height not found on the CCSpriteFrame. AnchorPoint won't work as expected. Regenerate the .plist");
 
 			// abs ow/oh
 			ow = abs(ow);
@@ -177,7 +186,7 @@ static CCSpriteFrameCache *sharedSpriteFrameCache_=nil;
 			NSArray *aliases = [frameDict objectForKey:@"aliases"];
 			for(NSString *alias in aliases) {
 				if( [spriteFramesAliases_ objectForKey:alias] )
-					CCLOG(@"cocos2d: WARNING: an alias with name %@ already exists",alias);
+					CCLOGWARN(@"cocos2d: WARNING: an alias with name %@ already exists",alias);
 
 				[spriteFramesAliases_ setObject:frameDictKey forKey:alias];
 			}
@@ -230,11 +239,18 @@ static CCSpriteFrameCache *sharedSpriteFrameCache_=nil;
 {
 	NSAssert(textureReference, @"textureReference should not be nil");
 	NSAssert(plist, @"plist filename should not be nil");
+	
+	if( ! [loadedFilenames_ member:plist] ) {
 
-	NSString *path = [[CCFileUtils sharedFileUtils] fullPathFromRelativePath:plist];
-	NSDictionary *dict = [NSDictionary dictionaryWithContentsOfFile:path];
+		NSString *path = [[CCFileUtils sharedFileUtils] fullPathFromRelativePath:plist];
+		NSDictionary *dict = [NSDictionary dictionaryWithContentsOfFile:path];
 
-	[self addSpriteFramesWithDictionary:dict textureReference:textureReference];
+		[self addSpriteFramesWithDictionary:dict textureReference:textureReference];
+		
+		[loadedFilenames_ addObject:plist];
+	}
+	else
+		CCLOGINFO(@"cocos2d: CCSpriteFrameCache: file already loaded: %@", plist);
 }
 
 -(void) addSpriteFramesWithFile:(NSString*)plist textureFilename:(NSString*)textureFilename
@@ -251,32 +267,39 @@ static CCSpriteFrameCache *sharedSpriteFrameCache_=nil;
 -(void) addSpriteFramesWithFile:(NSString*)plist
 {
 	NSAssert(plist, @"plist filename should not be nil");
+	
+	if( ! [loadedFilenames_ member:plist] ) {
 
-    NSString *path = [[CCFileUtils sharedFileUtils] fullPathFromRelativePath:plist];
-    NSDictionary *dict = [NSDictionary dictionaryWithContentsOfFile:path];
+		NSString *path = [[CCFileUtils sharedFileUtils] fullPathFromRelativePath:plist];
+		NSDictionary *dict = [NSDictionary dictionaryWithContentsOfFile:path];
 
-    NSString *texturePath = nil;
-    NSDictionary *metadataDict = [dict objectForKey:@"metadata"];
-    if( metadataDict )
-        // try to read  texture file name from meta data
-        texturePath = [metadataDict objectForKey:@"textureFileName"];
-
-
-    if( texturePath )
-    {
-        // build texture path relative to plist file
-        NSString *textureBase = [plist stringByDeletingLastPathComponent];
-        texturePath = [textureBase stringByAppendingPathComponent:texturePath];
-    } else {
-        // build texture path by replacing file extension
-        texturePath = [plist stringByDeletingPathExtension];
-        texturePath = [texturePath stringByAppendingPathExtension:@"png"];
-
-		CCLOG(@"cocos2d: CCSpriteFrameCache: Trying to use file '%@' as texture", texturePath);
-    }
+		NSString *texturePath = nil;
+		NSDictionary *metadataDict = [dict objectForKey:@"metadata"];
+		if( metadataDict )
+			// try to read  texture file name from meta data
+			texturePath = [metadataDict objectForKey:@"textureFileName"];
 
 
-	[self addSpriteFramesWithDictionary:dict textureFilename:texturePath];
+		if( texturePath )
+		{
+			// build texture path relative to plist file
+			NSString *textureBase = [plist stringByDeletingLastPathComponent];
+			texturePath = [textureBase stringByAppendingPathComponent:texturePath];
+		} else {
+			// build texture path by replacing file extension
+			texturePath = [plist stringByDeletingPathExtension];
+			texturePath = [texturePath stringByAppendingPathExtension:@"png"];
+
+			CCLOG(@"cocos2d: CCSpriteFrameCache: Trying to use file '%@' as texture", texturePath);
+		}
+
+		[self addSpriteFramesWithDictionary:dict textureFilename:texturePath];
+		
+		[loadedFilenames_ addObject:plist];
+	}
+	else 
+		CCLOGINFO(@"cocos2d: CCSpriteFrameCache: file already loaded: %@", plist);
+
 }
 
 -(void) addSpriteFrame:(CCSpriteFrame*)frame name:(NSString*)frameName
@@ -290,18 +313,25 @@ static CCSpriteFrameCache *sharedSpriteFrameCache_=nil;
 {
 	[spriteFrames_ removeAllObjects];
 	[spriteFramesAliases_ removeAllObjects];
+	[loadedFilenames_ removeAllObjects];
 }
 
 -(void) removeUnusedSpriteFrames
 {
+	BOOL removed_ = NO;
 	NSArray *keys = [spriteFrames_ allKeys];
 	for( id key in keys ) {
 		id value = [spriteFrames_ objectForKey:key];
 		if( [value retainCount] == 1 ) {
 			CCLOG(@"cocos2d: CCSpriteFrameCache: removing unused frame: %@", key);
 			[spriteFrames_ removeObjectForKey:key];
+			removed_ = YES;
 		}
 	}
+	
+	// XXX. Since we don't know the .plist file that originated the frame, we must remove all .plist from the cache
+	if( removed_ )
+		[loadedFilenames_ removeAllObjects];
 }
 
 -(void) removeSpriteFrameByName:(NSString*)name
@@ -319,6 +349,9 @@ static CCSpriteFrameCache *sharedSpriteFrameCache_=nil;
 
 	} else
 		[spriteFrames_ removeObjectForKey:name];
+	
+	// XXX. Since we don't know the .plist file that originated the frame, we must remove all .plist from the cache
+	[loadedFilenames_ removeAllObjects];
 }
 
 - (void) removeSpriteFramesFromFile:(NSString*) plist
@@ -327,6 +360,11 @@ static CCSpriteFrameCache *sharedSpriteFrameCache_=nil;
 	NSDictionary *dict = [NSDictionary dictionaryWithContentsOfFile:path];
 
 	[self removeSpriteFramesFromDictionary:dict];
+	
+	// remove it from the cache
+	id ret = [loadedFilenames_ member:plist];
+	if( ret )
+		[loadedFilenames_ removeObject:ret];
 }
 
 - (void) removeSpriteFramesFromDictionary:(NSDictionary*) dictionary
